--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.example.kriss.unbrable"
+        applicationId "nz.ac.auckland.unbrable"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
