--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".OverviewActivity"></activity>
-        <activity android:name=".DiaryEntry" >
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".OverviewActivity" />
+        <activity android:name=".DiaryEntry">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="nz.ac.auckland.unbrable.OverviewActivity" />
@@ -32,7 +32,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="nz.ac.auckland.unbrable.OverviewActivity" />
         </activity>
-
+        <activity android:name=".EnterPasswordActivity" />
     </application>
 
 </manifest>
