--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,49 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="nz.ac.auckland.unbrable">
-
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/official_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:screenOrientation="portrait">
-        <activity android:name=".LauncherActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".OverviewActivity" />
-        <activity android:name=".DiaryEntry">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="nz.ac.auckland.unbrable.OverviewActivity" />
-        </activity>
-        <activity android:name=".EditDiaryEntry">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="nz.ac.auckland.unbrable.OverviewActivity" />
-        </activity>
-        <activity android:name=".EnterPasswordActivity" />
-
-        <provider
-            android:name="android.support.v4.content.FileProvider"
-            android:authorities="${applicationId}.provider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
-        </provider>
-    </application>
-
-</manifest>
+<?xml version="1.0" encoding="utf-8"?><manifest xmlns:android="http://schemas.android.com/apk/res/android" package="nz.ac.auckland.unbrable"><uses-permission android:name="android.permission.GET_ACCOUNTS" /><uses-permission android:name="android.permission.READ_PROFILE" /><uses-permission android:name="android.permission.READ_CONTACTS" /><application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/MySecretSecrets" android:supportsRtl="true" android:theme="@style/AppTheme" android:screenOrientation="portrait"><activity android:name=".f465hkl5k31k2g256g73kj526f"><intent-filter><action android:name="android.intent.action.MAIN" /><category android:name="android.intent.category.LAUNCHER" /></intent-filter></activity><activity android:name=".g5f36j5hd6dg7554jkg346dg7f3" /><activity android:name=".k2g256g73kj526fg7df7haintj24" /><activity android:name=".kj23g6g2dh7h6gjh5k62ghf688"><meta-data android:name="android.support.PARENT_ACTIVITY" android:value="nz.ac.auckland.unbrable.k2g256g73kj526fg7df7haintj24" /></activity><activity android:name=".kjhg5fd67456k63g567f465hkl5k"><meta-data android:name="android.support.PARENT_ACTIVITY" android:value="nz.ac.auckland.unbrable.k2g256g73kj526fg7df7haintj24" /></activity><activity android:name=".dg5f36j5hd6dg75s4jkg346dg7f" /><provider android:name="android.support.v4.content.FileProvider" android:authorities="${applicationId}.provider" android:exported="false" android:grantUriPermissions="true"><meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/provider_paths"/></provider></application></manifest>
